[package]
name = "edgedb-query-derive"
version = "0.1.4"
description = "Crate that provide a bunch of derive macros that help to build EdgeDB query using edgedb-tokio crate"
authors = ["hsedjame <sedhjodev@gmail.com>"]
repository = "https://github.com/imagineDevit/edgedb/tree/main/edgedb-query-derive"
keywords = ["template", "proc_macro", "procmacro"]
edition = "2018"
license = "MIT"
readme = "README.md"

[lib]
proc-macro = true


[[test]]
name = "lib_tests"
path = "test/tests.rs"

[dependencies]
quote = "1"
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["proc-macro", "extra-traits", "quote"] }
serde = { version ="1.0", features = ["derive", "serde_derive"] }
serde_json = "1.0"
edgedb = "0.1"
edgedb-protocol = "0.4"
edgedb-query = "0.1.2"

[dev-dependencies]
trybuild = { version = "1.0", features = ["diff"] }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
