[package]
name = "edgedb-query"
version = "0.1.0"
edition = "2021"
authors  = ["Henri Joel Sedjame <sedhjodev@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[test]]
name="select_test"
path="test/queries/select.rs"


[dependencies]
serde = {version = "1.0", features= ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
edgedb = "0.1"
edgedb-protocol = "0.3"
uuid = { version = "1.1", features=["v4"] }
chrono = "0.4.19"