[package]
name = "edgedb-query"
description = "Crate that provide a bunch of traits and structs used by edgedb-query-derive crate"
repository = "https://github.com/imagineDevit/edgedb/tree/main/edgedb-query"
version = "0.1.1"
edition = "2021"
authors  = ["Henri Joel Sedjame <sedhjodev@gmail.com>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[test]]
name="lib_tests"
path="test/tests.rs"


[dependencies]
serde = {version = "1.0", features= ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
edgedb = "0.1"
edgedb-protocol = "0.4"
uuid = { version = "1.1", features=["v4"] }
chrono = "0.4.19"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3