[package]
name = "example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

edgedb-query-derive = {path = "../edgedb-query-derive"}

anyhow = "1.0.58"

# Tokio
tokio = { version = "1.19.2", features = ["full"] }
tokio-stream = "0.1.9"

# Edge DB
edgedb = "0.1"
edgedb-tokio = "0.2"
edgedb-protocol = "0.3"

# Serde
serde = "1.0.137"
serde_json = "1.0.81"
