[package]
name = "example"
version = "0.1.0"
edition = "2021"

[[test]]
name = "example"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

#edgedb-query = "0.1.6"
edgedb-query = { path = "../edgedb-query"}

#edgedb-query-derive = "0.1.5"
edgedb-query-derive = { path = "../edgedb-query-derive"}

anyhow = "1.0.58"

# Tokio
tokio = { version = "1.19.2", features = ["full"] }
tokio-stream = "0.1.9"

# Edge DB
edgedb = "0.1"
edgedb-tokio = "0.3"
edgedb-protocol = "0.4"

# Serde
serde = {version = "1.0", features= ["derive"] }
serde_json = "1.0.81"

# Testing
rstest = "0.16.0"
async-std = { version = "1.12.0", features = ["tokio1", "attributes"] }

